<resources>
    <string name="app_name">BookCrossing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Book registration
    <string name="title">Title...</string>
    <string name="author">Author...</string>
    <string name="editionNumber">Edition number...</string>
    <string name="yearOfPubb">Year of pubb...</string>
    <string name="book_menu_registration">Book Menu registration</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="submit">Submit</string>


    //Login
    <string name="user">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>

    //Scan ISBN
    <string name="noScanResult">No scan data received!</string>
    <string name="isbn">SCAN ISBN</string>
    <string name="scan_bar_code">Scan ISBN code with your camera</string>
    <string name="leave">Leave</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_login_in_short">Log</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_account_yet">No account yet? Create one!</string>
    <string name="title_activity_login_test">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="prompt_username">Username</string>
    <string name="book_research">Book research</string>
    <string name="profile">Profile informations</string>
    <string name="book_registration">Book registration</string>
    <string name="scan_isbn">Scan ISBN</string>
    <string name="foo">Null</string>
    <string name="author_search">Search by author...</string>
    <string name="title_search">Search by title...</string>
    <string name="reserve_book">Reserve Book</string>
    <string name="search">Search</string>
    <string name="profile_informations">PROFILE INFORMATIONS</string>
    <string name = "login_ok">Login completed successfully</string>
</resources>
