<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/BookRegistrationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI.Fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/user"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            tools:text="USERNAME" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            tools:text="PASSWORD"
            android:autofillHints="" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/leaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leave" />

        <TextView
            android:id="@+id/loginStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login status:" />

    </LinearLayout>

</FrameLayout>